custom trade screen graphics

--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -321,7 +321,7 @@
   "tooltip.jolcraft.legendary_page": "Salvaged from ancient tomes by historians. Can be used to restore ancient legendary tomes by certain dwarven professions.",
   "tooltip.jolcraft.trim_material": "Can be used to trim armor.",
   "tooltip.jolcraft.strongbox": "Strongboxes are chests that can generate with locks that needs to be picked. Breaking a locked strongbox also breaks the lock but removes any ungenerated loot. Breaking a strongbox with silk touch retains all of its contents.",
-  "tooltip.jolcraft.coin_pouch": "Stores up to 999 coins. Right-click when held to deposit all coins in inventory. Left-click with coins in inventory to deposit up to a stack. Right-click in inventory to withdraw up to a stack.",
+  "tooltip.jolcraft.coin_pouch": "Stores up to 999 coins. Can be used in trades. Right-click when held to deposit all coins in inventory. Left-click with coins in inventory to deposit up to a stack. Right-click in inventory to withdraw up to a stack.",
   "tooltip.jolcraft.hearth": "Can be activated if placed within 10 blocks of a claimed bed. Need to sleep in a bed to activate a hearth again. Multiple players can be bound to a hearth. Provides Homestead effect to bound players within range.",
   "tooltip.jolcraft.verdant": "JolCraft crops ignores growing conditions and also grow faster on this. Other crops can be planted but no extra effects.",
   "tooltip.jolcraft.vanilla_crop": "Grows like vanilla crops.",
@@ -399,7 +399,9 @@
   "tooltip.jolcraft.bounty.type.invalid": "Type: Invalid",
   "tooltip.jolcraft.bounty.type": "Type: ",
   "tooltip.jolcraft.bounty.wrong_type": "This is the wrong type of bounty to give to this dwarf.",
+  "tooltip.jolcraft.bounty.no_type": "Give this to a dwarf to get a bounty crate.",
   "tooltip.jolcraft.bounty.merchant": "Give this to a merchant to get a bounty crate.",
+  "tooltip.jolcraft.bounty.miner": "Give this to a miner to get a bounty crate.",
 
   "tooltip.jolcraft.bounty_crate.target": "Target: ",
   "tooltip.jolcraft.bounty_crate.count": "Required: %s",
@@ -416,10 +418,10 @@
   "tooltip.jolcraft.crate.cooldown": "You must wait before you can use another crate.",
   "tooltip.jolcraft.crate.no_offers_villager": "This villager has no trades!",
   "tooltip.jolcraft.crate.no_offers_dwarf": "This dwarf has no trades!",
-  "tooltip.jolcraft.restock_crate": "Can be used to restock the inventory of a trader.",
+  "tooltip.jolcraft.restock_crate": "Can be used to restock the inventory of a dwarf or villager trader.",
   "tooltip.jolcraft.restock_crate.no_need": "This trader doesn't need restocking.",
   "tooltip.jolcraft.restock_crate.success": "Trader inventory restocked!",
-  "tooltip.jolcraft.reroll_crate": "Can be used to reroll the inventory of a trader.",
+  "tooltip.jolcraft.reroll_crate": "Can be used to reroll the inventory of a dwarf or villager trader.",
   "tooltip.jolcraft.reroll_crate.fail": "This trader inventory cannot be rerolled!",
   "tooltip.jolcraft.reroll_crate.success": "Trader inventory rerolled!",
 
